tests/errors/tc_expr_use_after_free.lx
@module "main"

pub const main -> fn () int {
    let x: int = 42;
    free(&x);
    return 0;
}
